@@ -40,6 +40,7 @@ existing way.
 * Displaying image files without temporary files.
 * Support multiple buffers, where their name is derived from timeline spec.
 * Toggle automatic retrieval of the timeline by pressing 'a'.
+* Improved compatibility with global-font-lock mode.
 * ...
 
 ### Bug fixes
